# ashell

./: .gitignore  Cargo.toml  README.en.md  README.md
.github/workflows/: release.yml
locales/: en.yml  zh-CN.yml
src/: app.rs  config.rs  main.rs  terminal_element.rs  ui.rs
src/app/: dialogs.rs  keybinding_recorder.rs  mod.rs  startup.rs  theme.rs  ui.rs
src/backend/: local.rs  ssh.rs
src/session/: mod.rs
src/system/: mod.rs
src/terminal/: custom_blocks.rs  element.rs  highlight.rs  input.rs  mod.rs
