[package]
name = "ashell"
version = "0.4.8"
edition = "2024"
authors = ["ashell contributors"]
description = "A GPUI Component based SSH and local terminal client"
license = "GPL-3.0-or-later"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
tokio-socks = "0.5"
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "fcf32feacb367b75ec84dd40f041e4fd411d3cc1" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
flate2 = "1"
gpui = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90" }
gpui_platform = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90", features = ["font-kit", "runtime_shaders", "wayland", "x11"] }
gpui-component = { git = "https://github.com/weihuoya/gpui-component", rev = "ed9fa667de5604640f69c2a95b13e7ac93c2d4e1" }
gpui-component-assets = { git = "https://github.com/weihuoya/gpui-component", rev = "ed9fa667de5604640f69c2a95b13e7ac93c2d4e1" }
menu = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90" }
portable-pty = "0.8"
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2"
rust-i18n = "3"
sys-locale = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = "0.6"
sysinfo = "0.33"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "time", "tracing-log"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
futures = "0.3.32"
notify = "6.1.1"
open = "5.1"
time = { version = "0.3.45", features = ["formatting", "local-offset"] }
tracing-appender = "0.2.5"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90" }
gpui_platform = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90" }
gpui_web = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90" }
gpui_macros = { git = "https://github.com/weihuoya/zed", rev = "006325e0ba6255ff2bc602b11fafb8a4964b7b90" }

[build-dependencies]
winres = "0.1.12"
